force-app/main/default/objects/Account/fields/Signatory_Email__c.field-meta.xml
<CustomField>
    <fullName>Signatory_Email__c</fullName>
    <label>Signatory Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>