force-app/main/default/objects/Account/fields/Site__c.field-meta.xml
<CustomField>
    <fullName>Site__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Site</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cohorts</relationshipLabel>
    <relationshipName>Site</relationshipName>
    <type>Lookup</type>
</CustomField>