force-app/main/default/objects/Account/fields/Spent_to_Date__c.field-meta.xml
<CustomField>
    <fullName>Spent_to_Date__c</fullName>
    <description>Total Reimbursement Approved Amount</description>
    <inlineHelpText>Total Reimbursement Approved Amount</inlineHelpText>
    <label>Spent to Date</label>
    <summarizedField>Grant__c.Reimbursement_Approved_Amount__c</summarizedField>
    <summaryForeignKey>Grant__c.Account__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>