force-app/main/default/objects/Account/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Application Submitted</fullName>
            </value>
            <value>
                <fullName>Application Accepted</fullName>
            </value>
            <value>
                <fullName>Budget Submitted</fullName>
            </value>
            <value>
                <fullName>Budget Accepted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>