force-app/main/default/objects/Account/fields/Target_Number_of_8_13_Year_Olds__c.field-meta.xml
<CustomField>
    <fullName>Target_Number_of_8_13_Year_Olds__c</fullName>
    <label>Target Number of 8-13 Year Olds</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>