force-app/main/default/objects/Account/fields/Target_Number_of_Teens__c.field-meta.xml
<CustomField>
    <fullName>Target_Number_of_Teens__c</fullName>
    <label>Target Number of Teens</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>