force-app/main/default/objects/Account/fields/Team__c.field-meta.xml
<CustomField>
    <fullName>Team__c</fullName>
    <label>Team #</label>
    <length>25</length>
    <type>Text</type>
</CustomField>