force-app/main/default/objects/Account/fields/Team_Size__c.field-meta.xml
<CustomField>
    <fullName>Team_Size__c</fullName>
    <description>Average # of youth in a single team</description>
    <label>Team Size</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>