force-app/main/default/objects/Account/fields/Today__c.field-meta.xml
<CustomField>
    <fullName>Today__c</fullName>
    <label>Today</label>
    <type>Date</type>
</CustomField>