force-app/main/default/objects/Account/fields/Total_Budget__c.field-meta.xml
<CustomField>
    <fullName>Total_Budget__c</fullName>
    <label>Total Budget</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>