force-app/main/default/objects/Account/fields/updated_via_script__c.field-meta.xml
<CustomField>
    <fullName>updated_via_script__c</fullName>
    <defaultValue>false</defaultValue>
    <label>updated_via_script</label>
    <type>Checkbox</type>
</CustomField>