force-app/main/default/objects/Account/fields/Urban__c.field-meta.xml
<CustomField>
    <fullName>Urban__c</fullName>
    <label>Urban</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>