force-app/main/default/objects/Account/fields/Were_Funds_Helpful__c.field-meta.xml
<CustomField>
    <fullName>Were_Funds_Helpful__c</fullName>
    <label>Were Funds Helpful</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>