force-app/main/default/objects/Account/fields/Youth_Living_at_or_below_Poverty_Level__c.field-meta.xml
<CustomField>
    <fullName>Youth_Living_at_or_below_Poverty_Level__c</fullName>
    <label>Youth Living at or below Poverty Level</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>