force-app/main/default/objects/Account/fields/Youth_Served__c.field-meta.xml
<CustomField>
    <fullName>Youth_Served__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Youth Served</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>