force-app/main/default/objects/Account/recordTypes/Local_Organization.recordType-meta.xml
<RecordType>
    <fullName>Local_Organization</fullName>
    <active>true</active>
    <label>Local Organization</label>
</RecordType>