force-app/main/default/objects/Account/recordTypes/National_Organization.recordType-meta.xml
<RecordType>
    <fullName>National_Organization</fullName>
    <active>true</active>
    <label>National Organization</label>
</RecordType>