force-app/main/default/objects/Account/listViews/BBBSA_Local_Organizations.listView-meta.xml
<ListView>
    <fullName>BBBSA_Local_Organizations</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>CEO_Email__c</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>BBBS_ID__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Local_Organization</value>
    </filters>
    <filters>
        <field>FirstPic_National_Org_Code__c</field>
        <operation>equals</operation>
        <value>BBBSA</value>
    </filters>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>BBBS_ID__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>BBBSA Local Organizations</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>