force-app/main/default/objects/Account/listViews/Local_Organizations.listView-meta.xml
<ListView>
    <fullName>Local_Organizations</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>National_Organization__c</columns>
    <columns>Has_Sites__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Local_Organization</value>
    </filters>
    <label>Local Organizations</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>