force-app/main/default/objects/Account/listViews/NPAL_Accounts.listView-meta.xml
<ListView>
    <fullName>NPAL_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FirstPic_Org_Code__c</field>
        <operation>equals</operation>
        <value>NPAL</value>
    </filters>
    <label>NPAL Accounts</label>
</ListView>