force-app/main/default/objects/Account/listViews/OVC_Local_Organizations.listView-meta.xml
<ListView>
    <fullName>OVC_Local_Organizations</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>CEO_Email__c</columns>
    <columns>ACCOUNT.LAST_ACTIVITY</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Local_Organization</value>
    </filters>
    <filters>
        <field>National_Grants__c</field>
        <operation>includes</operation>
        <value>OVC</value>
    </filters>
    <label>OVC Local Organizations</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>