force-app/main/default/objects/Account/listViews/Sites.listView-meta.xml
<ListView>
    <fullName>Sites</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Local_Organization__c</columns>
    <columns>National_Organization__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Site</value>
    </filters>
    <label>Sites</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>