force-app/main/default/objects/Account/listViews/TRAIL_Organizations.listView-meta.xml
<ListView>
    <fullName>TRAIL_Organizations</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>National_Organization__c</columns>
    <columns>Has_Sites__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>ACCOUNT.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Local_Organization</value>
    </filters>
    <filters>
        <field>FirstPic_National_Org_Code__c</field>
        <operation>equals</operation>
        <value>NCAI</value>
    </filters>
    <filters>
        <field>National_Grants__c</field>
        <operation>excludes</operation>
        <value>OVC</value>
    </filters>
    <label>TRAIL Organizations</label>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>