force-app/main/default/objects/Account/listViews/TRAILAccounts.listView-meta.xml
<ListView>
    <fullName>TRAILAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FirstPic_National_Org_Code__c</field>
        <operation>equals</operation>
        <value>NCAI</value>
    </filters>
    <filters>
        <field>National_Grants__c</field>
        <operation>includes</operation>
        <value>TRAIL</value>
    </filters>
    <label>TRAIL Accounts</label>
</ListView>